Fix spacing of logos in archive on small screen (#5001)
There was a missing margin between the OWID logo and the affiliate logos
on archive site on a small screen introduced in 0324820c2.

We can simplify the code, but the change introduces smaller margin
between the OWID logo and the affiliate logos on live site on a single
size, which probably wasn't even intentional, since the margin is
smaller on both smaller and larger screen sizes.

--- a/site/SiteNavigation.scss
+++ b/site/SiteNavigation.scss
@@ -30,9 +30,6 @@
     @include sm-up {
         @include column-gap(24px);
     }
-    @include md-only {
-        @include column-gap(0px);
-    }
 
     .SiteNavigationToggle--mobile-menu {
         flex: 1; // center owid logo
